--- a/editor/css/style.css
+++ b/editor/css/style.css
@@ -44,3 +44,16 @@ body {
 .servermsgs.error {
   color: #f22;
 }
+
+.build-error {
+  background: #A00;
+  display: inline-block;
+  padding: .25em .5em 0.1em;
+  color: white;
+  font-style: italic;
+  font-family: sans-serif;
+  font-size: 10pt;
+  border-radius: .5em;
+  margin: 0 1em 1em;
+  border: 1px solid #000;
+}
