--- a/editor/css/style.css
+++ b/editor/css/style.css
@@ -23,13 +23,40 @@ body {
 }
 
 /* Sprite placeholder */
-.CodeMirror-code .sprite {
+.CodeMirror-code .sprite,
+.CodeMirror-code .tune {
+  position: relative;
   padding: 0 0.2em;
+  margin: 0 0.2em;
   cursor: pointer;
 }
 .CodeMirror-code .sprite:before {
   content: "👾";
 }
+.CodeMirror-code .tune:before {
+  content: "🔊";
+}
+
+/* Playback animation */
+.tune.play {
+  border: 1px solid white;
+  border-radius: 10%;
+}
+
+.tune.play>.bg {
+  background: purple;
+  position: absolute;
+  top: 0; left: 0;
+  bottom: 0; right: 100%;
+  z-index: -1;
+  transition: 2s all linear;
+}
+
+.tune.play>.bg.playing {
+  background: #e7e;
+  right: 0;
+}
+
 
 .servermsgs {
   background: #112 none repeat scroll 0% 0%;
