--- a/editor/css/style.css
+++ b/editor/css/style.css
@@ -84,3 +84,13 @@ body {
   margin: 0 1em 1em;
   border: 1px solid #000;
 }
+
+/* Being edited */
+.CodeMirror-code .sprite.editing {
+  position: fixed;
+  top: 12px;
+  right: 4px;
+  padding: 0; margin: 0;
+  font-size: 4em;
+  text-shadow: 1px 0 1px white, -1px 0 1px white;
+}
