Factored out the Sprites template library dependencies, added erase+text support

--- a/templates/sprites/index.html
+++ b/templates/sprites/index.html
@@ -28,7 +28,8 @@
   <body>
     <canvas class="microcanvas" width="128" height="64"></canvas>
 
-    <script src="pif.js"></script>
+    <script src="../../editor/lib/microcanvas/microcanvas.js"></script>
+    <script src="../../editor/lib/pif/lib.js"></script>
     <script src="sprites.js"></script>
   </body>
 </html>
