Microcanvas live previews

--- a/editor/css/painter.css
+++ b/editor/css/painter.css
@@ -2,7 +2,7 @@
 body.pixel-editor {
   overflow: hidden;
 }
-iframe {
+body.pixel-editor #codeplugin {
   width: 100%;
   height: calc( 100% - 28px );
   position: fixed;
