--- a/editor/css/style.css
+++ b/editor/css/style.css
@@ -103,3 +103,19 @@ body {
   margin: 0 1em 1em;
   border: 1px solid #000;
 }
+
+
+/* Preview iframe */
+iframe.preview {
+	position: fixed;
+	z-index: 1000;
+	border: 1px solid #444;
+	top: 1em;
+	right: 1em;
+	box-shadow: -.5em -.5em .75em black;
+}
+
+iframe.preview::hover {
+  width: 80vw;
+  height: 40vw;
+}
