Update RJS dino template for showcasing

--- a/templates/rjs/index.html
+++ b/templates/rjs/index.html
@@ -28,11 +28,11 @@
   <body>
     <canvas class="microcanvas" width="128" height="64"></canvas>
 
-    <script src="../../editor/js/util.js"></script>
-    <script src="../../editor/js/score.js"></script>
-    <script src="../../editor/js/synth.js"></script>
-    <script src="../../editor/lib/microcanvas/microcanvas.js"></script>
-    <script src="../../editor/lib/pif/lib.js"></script>
+    <script src="/js/util.js"></script>
+    <script src="/js/score.js"></script>
+    <script src="/js/synth.js"></script>
+    <script src="/lib/microcanvas/microcanvas.js"></script>
+    <script src="/lib/pif/lib.js"></script>
     <script src="rjs.js"></script>
   </body>
 </html>
